fix(productivity-suite): add missing text-align center for todo-list cards (#96)

--- a/productivity-suite/app/fragments/todo-lists/src/components/TodoListsCarousel.css
+++ b/productivity-suite/app/fragments/todo-lists/src/components/TodoListsCarousel.css
@@ -8,6 +8,7 @@
 
 .todo-lists-carousel :global(.todo-list-card) {
     font-size: 2rem;
+    text-align: center;
     display: grid;
     place-items: center;
     color: #4d4d4d;
